[package]
name = "gmodx"
version = "0.1.0"
authors = ["Srlion <srlion32@gmail.com>", "William Venner <william@venner.io>"]
edition = "2024"
license = "MIT"
description = "A swiss army knife for creating binary modules for Garry's Mod in Rust"
repository = "https://github.com/Srlion/gmodx-rs"
keywords = ["gmod", "garrysmod", "module", "glua"]
categories = [
    "api-bindings",
    "external-ffi-bindings",
    "game-development",
    "development-tools",
]

[dependencies]
gmodx-macros = { path = "../gmodx-macros", version = "0.1.0" }
inventory = "0.3.21"
libloading = "0.8.9"

[build-dependencies]
bindgen = "0.72.1"
cc = "1.0"
